add quantity information
