# src/main/kotlin/com/wutsi/platform/catalog/dto/CreateProductRequest.kt
@@ -1,8 +1,10 @@
 package com.wutsi.platform.catalog.dto
 
+import javax.validation.constraints.Min
 import javax.validation.constraints.NotBlank
 import javax.validation.constraints.Size
 import kotlin.Double
+import kotlin.Int
 import kotlin.Long
 import kotlin.String
 
@@ -16,5 +18,10 @@ public data class CreateProductRequest(
     public val price: Double? = null,
     public val comparablePrice: Double? = null,
     public val categoryId: Long = 0,
-    public val subCategoryId: Long = 0
+    public val subCategoryId: Long = 0,
+    @get:Min(0)
+    public val quantity: Int = 0,
+    public val maxOrder: Int? = null,
+    @get:NotBlank
+    public val type: String = ""
 )
