# src/main/kotlin/com/wutsi/platform/catalog/dto/Product.kt
@@ -17,6 +17,11 @@ public data class Product(
     public val comparablePrice: Double? = null,
     public val currency: String = "",
     public val visible: Boolean = false,
+    public val categoryId: Long = 0,
+    public val subCategoryId: Long = 0,
+    public val quantity: Int = 0,
+    public val maxOrder: Int? = null,
+    public val type: String = "",
     @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
     public val created: OffsetDateTime = OffsetDateTime.now(),
     @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
